samples/_failures_safe/1761087413_58f9fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39c9b8c9.c: In function ‘main’:
./samples/SAFE/__tmp_39c9b8c9.c:150:9: error: expected expression at end of input
  150 |         if (strcmp(input, "ALL") ==
      |         ^~
./samples/SAFE/__tmp_39c9b8c9.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_39c9b8c9.c:150:9: error: expected declaration or statement at end of input
